--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 /* HEADER */
-
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
@@ -41,13 +40,14 @@ header nav {
 /* styles <header> <ul> <li> */
 header nav ul li {
     display: inline;
-    margin: 0 30px;
+    margin: 0 25px;
     font-weight: lighter;
     font-size: 22px;
 }
 
-/* FOOTER */
+/* End Header */
 
+/* FOOTER */
 /* styles <footer> */
 footer {
     background: #fce138;
@@ -74,3 +74,62 @@ footer div {
 footer a {
     color: #024e76;
 }
+/* End Footer */
+
+/* Hero Style Start */
+section {
+    padding: 60px;
+}
+
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+/* Hero Form */
+.hero-form {
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    border: 3px solid #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
+
+.hero-form h3 {
+    font-size: 30px;
+    margin: 0px;
+}
+
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+
+.form-input{
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.hero-form label {
+    margin: 0 5px;
+}
+
+.hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/* Hero Style End */
+
