--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,11 +60,13 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 /* styles <footer> <h2> */
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
@@ -72,7 +74,6 @@ footer h2 {
 
 /* styles <footer> <div> */
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -249,6 +250,7 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+/* End Trainer */
 
 /* REACH OUT STYLES START */
 .contact {
