--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,29 +84,43 @@ footer a {
 }
 /* End Footer */
 
-/* Hero Style Start */
+/* HERO START */
 section {
     padding: 60px;
 }
 
-.hero {
-    background-image: url("../images/hero-bg.jpg");
-    height: 600px;
-    background-size: cover;
-    background-position: center;
-    position: relative;
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 /* Hero Form */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 40%;
+    margin: 3.5%;
+}
+
 .hero-form {
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
     border: 3px solid #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
 }
 
 .hero-form h3 {
