--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,6 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 40%;
-    margin: 3.5%;
 }
 
 .hero-form {
@@ -121,6 +119,8 @@ section {
     padding: 20px;
     color: #024e76;
     border: 3px solid #024e76;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -156,9 +156,6 @@ section {
 /* Hero Style End */
 
 /* What we do */
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -167,6 +164,7 @@ section {
     font-size: 20px;
     /* centers paragraph */
     margin: 0 auto;
+    text-align: center;
 }
 
 /* what you do */
@@ -179,18 +177,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -201,35 +192,53 @@ section {
     border-color: #39a6b2;
 }
 
-.steps div {
-    margin-bottom: 80px;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
-.steps h3 {
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
+    flex: 12;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
+
 
 /* Trainer section */
-.trainers {
-    text-align: center;
-}
-
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -267,11 +276,6 @@ section {
 /* End Trainer */
 
 /* REACH OUT STYLES START */
-.contact {
-text-align: center;
-background: #024e76;
-}
-
 .contact h2 {
     color: #fce138;
 }
@@ -306,3 +310,16 @@ font-style: normal;
 color: #fce138;
 }
 /* REACH OUT STYLES END */
+
+/* Bonus rules*/
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
