--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+
+/* MOBILE STUFF */
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    
+}
+/* END MOBILE STUFF */
+
 body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
@@ -48,7 +56,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -95,7 +103,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -104,8 +112,8 @@ section {
     color: #fce138;
 }
 
-/* Hero Form */
 .hero {
+    align-items: flex-start;
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
@@ -175,7 +183,7 @@ section {
 
 /* general styling for intro h2 and steps h2 */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
