--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,49 +4,37 @@
     box-sizing: border-box;
 }
 
-
-/* MOBILE STUFF */
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-@media screen and (max-width: 980px) {
-    
-}
-/* END MOBILE STUFF */
-
 body {
+    /* more on this crazy alphanumeric value later*/ 
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* HEADER */
-/* apply styles to <header> */
+/* add styles to header */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2; 
+    background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-/* styles <header> <h1> elements */
-header h1 {
+header h1 a {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
 }
 
-/* styles <header> <a> */
 header a {
     text-decoration: none;
     color: #fce138;
 }
 
-/* styles <header> <nav> */
 header nav {
-    margin: 7px;
+    margin: 7px 0;
 }
 
-/* styles <header> <ul> <li> */
 header nav ul {
     display: flex;
     flex-wrap: wrap;
@@ -60,41 +48,43 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
-/* END HEADER */
 
-/* FOOTER */
-/* styles <footer> */
 footer {
     background: #fce138;
     width: 100%;
-    padding: 40px 35px;
+    padding: 30px 45px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-/* styles <footer> <h2> */
 footer h2 {
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
-/* styles <footer> <div> */
 footer div {
     line-height: 1.5;
     text-align: right;
 }
 
-/* styles <footer> <div> <a> */
 footer a {
-    color: #024e76;
+    color: #a24e76;
 }
-/* End Footer */
 
-/* HERO START */
 section {
     padding: 60px;
+}
+
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -112,41 +102,39 @@ section {
     color: #fce138;
 }
 
-.hero {
-    align-items: flex-start;
-    background-image: url("../images/hero-bg.jpg");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
 .hero-form {
-    background-color: #fce138;
-    padding: 20px;
     color: #024e76;
-    border: 3px solid #024e76;
+    padding: 20px;
+    background-color: #fce138;
+    border: solid 3px #024e76;
     width: 40%;
-    margin: 3.5%;
+    margin: 3.5%
 }
 
-.hero-form h3 {
-    font-size: 30px;
-    margin: 0px;
+.hero-form h3 { 
+    margin-bottom: 15px;
+    font-size: 24px;
 }
 
 .hero-form p {
-    margin: 5px 0 15px 0;
+    margin-top: 5 0 15px 0;
 }
 
-.form-input{
-    border: 1px solid #024e76;
+.form-input {
+    font-size: 16px;
+    border: solid 1px #024e76;
     display: block;
     padding: 7px 15px;
-    font-size: 16px;
     color: #024e76;
     width: 100%;
+    margin-bottom: 15px;
+}
+
+.form-instructions {
+    margin-bottom: 15px;
+}
+
+#acknowledge {
     margin-bottom: 15px;
 }
 
@@ -155,49 +143,43 @@ section {
 }
 
 .hero-form button {
+    padding: 10px 20px;
+    border: none;
+    font-size: 16px;
     color: #fce138;
     background-color: #024e76;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
 }
-/* Hero Style End */
-
-/* What we do */
 
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
-    /* centers paragraph */
     margin: 0 auto;
     text-align: center;
 }
 
-/* what you do */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
-/* general styling for intro h2 and steps h2 */
 .section-title {
     font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
-    padding-bottom: 20px;
+    padding-bottom:20px;
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
+
 }
 
 .primary-border {
     border-color: #fce138;
 }
-  
+
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: #39a6b2
 }
 
 .step {
@@ -211,26 +193,18 @@ section {
     justify-content: space-between;
 }
 
+.step h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+    flex: 1 30%;
+}
+
 .step-info {
     flex: 2 70%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-}
-
-.step-img {
-    flex: 1 12%;
-    margin-right: 20px;
-}
-
-.step-img img {
-    max-width: 100%;
-}
-
-.step h3 {
-    color: #024e76;
-    font-size: 46px;
-    flex: 1 30%;
 }
 
 .step-text p {
@@ -245,14 +219,17 @@ section {
     color: #024e76;
 }
 
+.step-text {
+    flex: 12;
+}
 
-/* Trainer section */
-.trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
 }
 
 .trainer {
@@ -262,51 +239,67 @@ section {
     flex: 1;
 }
 
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
     line-height: 1.3;
 }
 
-.trainer-bio h3 {
-    font-size: 28px;
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
 }
-/* End Trainer */
 
-/* REACH OUT STYLES START */
 .contact {
-    background: #024e76;
+    background-color: #024e76;
+}
+
+#reach-out h2 {
+    color: #fce138;
+}
+
+#reach-out h3 {
+    color: #fce138;
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+#reach-out p , #reach-out address {
+    margin-bottom: 20px;
+    font-style: normal;
+    line-height: 1.5;
 }
 
 .contact-info {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-.contact-info > * {
-    flex: 1;
-    margin: 15px;
-}
-
-.contact h2 {
-    color: #fce138;
 }
 
 .contact-info iframe {
@@ -317,20 +310,17 @@ section {
     color: white;
 }
 
-.contact-info h3 {
-color: #fce138;
-font-size: 32px;
+.contact-info a {
+    color: #fce138;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
 }
 
 .contact-info p, .contact-info address {
-margin: 20px 0;
-line-height: 1.5;
-font-size: 16px;
-font-style: normal;
-}
-
-.contact-info a {
-color: #fce138;
+    font-size: 16px;
 }
 
 .contact-form input, .contact-form textarea {
@@ -351,19 +341,107 @@ color: #fce138;
     color: #024e76;
     text-align: center;
     padding: 15px 0;
-    font-size: 16px;
-}
-/* REACH OUT STYLES END */
-
-/* Bonus rules*/
-.text-left {
-    text-align: left;
+    font-size: 16px
 }
 
-.text-right {
-    text-align: right;
+/*MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+    padding-bottom: 0;
+    justify-content: center;
+    }
+
+    header h1 {
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    footer h2, footer div {
+        text-align: center;
+        width: 100%
+    }
+
+    .hero-cta, .hero-form {
+        width: 100%;
+    }
+
+    .hero-cta {
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    .trainer {
+        flex: 0 70%;
+    }
+
+    .contact-info iframe {
+        flex: 1 100%;
+    }
 }
 
-.flex-row {
-    display: flex;
+/*MEDIA QUERY FOR TABLETS AND SMALLER*/
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .step-text {
+        flex: 100%;
+    }
+}
+
+/*MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
+@media screen and (max-width: 575px) {
+    .hero-form button {
+        width: 100%;
+    }
+
+    .section-title {
+        width: 95%;
+    }
+
+    .intro p {
+        width: 100%;
+    }
+
+    .trainer {
+        flex: 0 100%
+    }
+
+    .contact-info {
+        text-align: center;
+    }
+
+    .contact-info > * {
+        flex: 0 100%
+    }
+
+    .contact-form {
+        order: 3;
+    }
 }
