--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 a {
@@ -46,6 +54,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+}
+
+header nav ul li a:hover {
+    background-color: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 /* Footer Start */
@@ -86,6 +101,8 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -101,6 +118,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
@@ -109,7 +127,9 @@ section {
     background-color: #fce138;
     border: solid 3px #024e76;
     width: 40%;
-    margin: 3.5%
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 { 
@@ -129,6 +149,13 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .form-instructions {
@@ -149,6 +176,7 @@ section {
     font-size: 16px;
     color: #fce138;
     background-color: #024e76;
+    border-radius: 10px;
 }
 
 .intro p {
@@ -189,12 +217,25 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
+
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+}
+
+/* THIS IS THE SAME AS ^^^
+.step {
+  re-add alongside existing declarations
+  border-bottom: 1px solid #39a6b2;
+}
+.step:last-child {
+  border-bottom: none;
+}
+*/
 
 .step h3 {
     color: #024e76;
@@ -337,6 +378,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -346,7 +394,13 @@ section {
     color: #024e76;
     text-align: center;
     padding: 15px 0;
-    font-size: 16px
+    font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 /* SERVICE STYLES BEGIN */
@@ -406,15 +460,18 @@ section {
     header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
     }
 
     header h1 {
         width: 100%;
         justify-content: center;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     header nav ul li a {
         font-size: 20px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     footer h2, footer div {
@@ -495,6 +552,10 @@ section {
 @media screen and (max-width: 575px) {
     .hero-form button {
         width: 100%;
+    }
+
+    .hero-form button:hover {
+        background-color: #39a6b2;  
     }
 
     .section-title {
