--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,8 +359,67 @@ section {
     justify-content: space-around;
 }
 
-.trainer img {
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+    background-size: cover;
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+    background-size: cover;
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+    background-size: cover;
+}
+
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
+}
+
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(252, 225, 56, 0.3), var(--secondary-color));
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: .5s;
+}
+
+.trainer:hover .trainer-img::after {
+    opacity: 1;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
+    transition: 1s;
+}
+
+.trainer-img h3 {
+    position: relative;
+    z-index: 9998;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: 0.3s;
+}
+  
+.trainer-img h4 {
+    position: relative;
+    z-index: 9998;
+    font-size: 22px;
+    top: 200px;
+    transition: 0.3s;
 }
 
 .trainer-bio {
@@ -380,8 +439,16 @@ section {
     display: flex;
 }
 
+.trainer-bio h3 {
+    font-size: 28px;
+    display: none;
+}
+
 .trainer-bio h4 {
     font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+    display: none;
 }
 
 .trainer-bio p {
@@ -612,7 +679,15 @@ section {
         writing-mode: unset;
         grid-column: 1 / span 2;
         grid-row: -1 / span 1;
-    }  
+    } 
+
+    .trainer-img h3, .trainer-img h4, trainer-img::after {
+        display: none;
+    }
+
+    .trainer-bio h3, .trainer-bio h4 {
+        display: block;
+    }
 }
 
 /*MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
